--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
