--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Somonnoy",
-  "short_name": "Somonnoy",
+  "name": "Studify",
+  "short_name": "Studify",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
