--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.20.0",
     "motion": "^12.23.24",
     "next": "15.5.2",
+    "posthog-js": "^1.290.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
